--- a/14_08_2022.html
+++ b/14_08_2022.html
@@ -17,9 +17,20 @@ c += c+a; //21
 console.log(c);
 console.log(c);
 
+// branching statement
+// conditional statement
 
+var x = 10;
+var y = 20;
+// output = true/false
 
-
+var passMark = 60;
+var userMark = 33;
+if(userMark >= passMark){
+    console.log("PASS");
+}else{
+    console.log("FAIL");
+}
 
 
 </script>
