--- a/29_08_2022_prac.html
+++ b/29_08_2022_prac.html
@@ -3,28 +3,23 @@
 // find the max 
 // find the min
 
-var arr = [15, 2, 8, 70, 45, 80, 100, 4, 85, 46, 47, 10, 2, 185];
+var arr = [15, 201, 8, 70, 185, 2, 80, 100, 4, 85, 46, 47, 10];
 /*
 for(i=1; i<6; i++){
     var temp = parseInt(prompt("Enter value"));
     arr.push(temp);
 }*/
 
-//console.log(arr.length);
-//console.log(arr.length - 1);
-var max = 0;
-var min = 0;
-for(i=0; i<arr.length - 1; i++){
-        if(arr[i] > arr[i+1]){
+
+var max = arr[0];
+var min = arr[0];
+for(i=1; i<arr.length; i++){
+        if(arr[i] > max){
             max = arr[i];
-            min = arr[i+1];
-        }else{
-            min = arr[i];
-            max = arr[i+1];
         }
-       // console.log(max + " " + min);
-    //console.log(arr[i] + " " + arr[i+1]);
-    //console.log(arr[i+1]);
+        if(arr[i] < min){
+            min = arr[i];
+        }
 }
 console.log(max);
 console.log(min);
