--- a/31_08_2022.html
+++ b/31_08_2022.html
@@ -1,18 +1,18 @@
 <html>
     <head></head>
     <body>
-        <h1 id="my_heading_1">This is a heading 1</h1>
-        <h1 id="my_heading_2">This is a heading 2</h1>
-        <p>This is A paragraph</p>
-        
+    <button title="hello world" id="btn_random">Click</button>
+           
         <script>
-            document.getElementById("my_heading_1").innerHTML = "Abra ka dabra";
-            head1 = "Abra ka dabra";
-            console.log(head1);
-            document.getElementById("my_heading_1").style.color = "red";
+            function generateRandom(e){
+                console.log("hello");
+            }
+            generateRandom();
+            var element = document.getElementById("btn_random");
+            document.getElementById("btn_random").addEventListener("click", function(){
+                console.log("called 2");
+            });
 
-            var test = ""
-            document.write("<ol><li>Part 1</li><li>Part 2</li></ol>");
         </script>
     </body>
 </html>
